@@ -1,8 +1,10 @@
 Internal, very small, undocumented, or invisible changes
 ********************************************************
 
-Camlp5 Version 5.09:
+Camlp5 Version 5.13:
 ---------------------
+
+* [2009] Returned repository to CVS (was SVN).
 
 Camlp5 Version 5.08:
 ---------------------
