@@ -1,5 +1,5 @@
 (* camlp5r pa_extend.cmo q_MLast.cmo *)
-(* $Id: pa_r.ml,v 1.119 2008/12/31 11:01:18 deraugla Exp $ *)
+(* $Id: pa_r.ml,v 1.120 2009/07/30 09:02:55 deraugla Exp $ *)
 (* Copyright (c) INRIA 2007-2008 *)
 
 open Pcaml;
@@ -387,7 +387,8 @@ EXTEND
     | NONA
       [ p1 = SELF; ".."; p2 = SELF -> <:patt< $p1$ .. $p2$ >> ]
     | LEFTA
-      [ p1 = SELF; p2 = SELF -> <:patt< $p1$ $p2$ >> ]
+      [ p1 = SELF; p2 = SELF -> <:patt< $p1$ $p2$ >>
+      | "lazy"; p = SELF -> <:patt< lazy $p$ >> ]
     | LEFTA
       [ p1 = SELF; "."; p2 = SELF -> <:patt< $p1$ . $p2$ >> ]
     | "simple"
