@@ -453,6 +453,7 @@ let rec patt =
   | PaInt (loc, _, _) -> error loc "special int not impl in patt"
   | PaFlo (loc, s) -> mkpat loc (Ppat_constant (Const_float (uv s)))
   | PaLab (loc, _, _) -> error loc "labeled pattern not allowed here"
+  | PaLaz (loc, p) -> mkpat loc (Ppat_lazy (patt p))
   | PaLid (loc, s) -> mkpat loc (Ppat_var (uv s))
   | PaOlb (loc, _, _) -> error loc "labeled pattern not allowed here"
   | PaOrp (loc, p1, p2) -> mkpat loc (Ppat_or (patt p1, patt p2))
