@@ -2872,7 +2872,11 @@ Grammar.extend
         (fun (p2 : 'patt) _ (p1 : 'patt) (loc : Ploc.t) ->
            (Qast.Node ("PaRng", [Qast.Loc; p1; p2]) : 'patt))];
      None, Some Gramext.LeftA,
-     [[Gramext.Sself; Gramext.Sself],
+     [[Gramext.Stoken ("", "lazy"); Gramext.Sself],
+      Gramext.action
+        (fun (p : 'patt) _ (loc : Ploc.t) ->
+           (Qast.Node ("PaLaz", [Qast.Loc; p]) : 'patt));
+      [Gramext.Sself; Gramext.Sself],
       Gramext.action
         (fun (p2 : 'patt) (p1 : 'patt) (loc : Ploc.t) ->
            (Qast.Node ("PaApp", [Qast.Loc; p1; p2]) : 'patt))];
